# articulated_vehicle

./: README.md
articulated_model/controller/pid/launch/: differential_drive_sim.launch
articulated_model/controller/pid/src/: controller.cpp  transform_output.cpp
articulated_model/navigation_sim_demo/launch/include/: move_base.launch.xml
articulated_model/robot_sim_demo/: package.xml
articulated_model/robot_sim_demo/launch/: robot_spawn.launch
articulated_model/robot_sim_demo/launch/include/: xbot-u.launch.xml
articulated_model/robot_sim_demo/models/meshes/: bucket_Link.dae  leftbehindwheel_Link.dae  rightbehindwheel_Link.STL
articulated_model/robot_sim_demo/param/: xbot-u_control.yaml
articulated_model/robot_sim_demo/urdf/: xbot-u.gazebo  xbot-u.gazebo.backg  xbot-u.urdf.xacro
articulated_model/vehicle_urdf_model/: CMakeLists.txt
articulated_model/vehicle_urdf_model/config/: joint_names_vehicle_urdf_model.yaml
articulated_model/vehicle_urdf_model/meshes/: frontbase_link.STL
articulated_vehicle/src/navigation_sim_demo/: CMakeLists.txt
articulated_vehicle/src/navigation_sim_demo/param/: local_costmap_params.yaml
articulated_vehicle/src/robot_sim_demo/: CMakeLists.txt
articulated_vehicle/src/robot_sim_demo/param/: mux.yaml  xbot-u_control.yaml
articulated_vehicle/src/robot_sim_demo/worlds/: ROS-Academy.world
articulated_vehicle/src/vehicle_urdf_model/: package.xml  urdf.rviz
articulated_vehicle/src/vehicle_urdf_model/launch/: gazebo.launch
articulated_vehicle/src/vehicle_urdf_model/meshes/: behindbase_Link.STL
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: bringup.launch  fake_move_base.launch  fake_nav_demo.launch
src/controller/joystick_drivers/: README.md
src/controller/mpc_node/: CMakeLists.txt  package.xml
src/controller/mpc_node/cfg/: mpc_dynamic.cfg
src/controller/mpc_node/include/: MPC.h
src/controller/mpc_node/launch/: mpc_start.launch
src/controller/mpc_node/src/: MPC.cpp  MPC_Node.cpp
src/controller/pid/: CMakeLists.txt  package.xml
src/controller/pid/cfg/: Pid.cfg
src/controller/pid/include/pid/: odom_cul.h  showpath.h
src/controller/pid/launch/: transform_output.launch
src/controller/pid/msg/: wheel_vel.msg
src/controller/pid/src/: Manual_control.cpp  transform_output.cpp
src/controller/pid/src/odom_pub/: odom_cul.cpp  odom_pub.cpp
src/controller/pid/src/show_path/: showpath.cpp
src/controller/test_code/: CMakeLists.txt  package.xml
src/controller/test_code/src/: getrobotpose.cpp
src/controller/vinyson_Joystick/: CMakeLists.txt  README.md  package.xml
src/controller/vinyson_Joystick/launch/: vinyson_joy_start.launch
src/controller/vinyson_Joystick/src/: auto_goal.cpp  vinyson_driver.cpp
src/navigation/move_base/src/: move_base.cpp
src/navigation_sim_demo/: package.xml
src/navigation_sim_demo/launch/: amcl_demo.launch
src/navigation_sim_demo/param/: move_base_params.yaml
src/robot_mrobot/mrobot_description/launch/: robot_spawn.launch
src/robot_mrobot/mrobot_description/param/: xbot-u_control.yaml
src/robot_mrobot/mrobot_description/urdf/: urobot.urdf  urobot_forrviz.urdf
src/robot_mrobot/mrobot_gazebo/worlds/: articulate_path.world
src/robot_mrobot/mrobot_navigation/launch/: amcl_demo.launch  amcl_nav.launch  gmapping_bag.launch  gmapping_nav.launch  gmapping_slam.launch  hector_demo.launch  view_slam.launch
src/robot_sim_demo/urdf/: xbot-u.gazebo  xbot-u.urdf.xacro
src/slam_sim_demo/: CMakeLists.txt  package.xml
src/vehicle_urdf_model/launch/: display.launch
src/vehicle_urdf_model/robots/: vehicle_urdf_model.urdf
(+34 files in other folders)
