<package>
  <name>vehicle_urdf_model</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for vehicle_urdf_model</p>
    <p>This package contains configuration data, 3D models and launch files
for vehicle_urdf_model robot</p>
  </description>
  <author>me</author>
  <maintainer email="gaxx2280@live.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
